fixes spacing issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1489,9 +1489,10 @@ Darker-grey:    #9cafbb;
   .card--desktop {
     height: auto;
     padding: 1.5rem;
-    margin: 0.75rem 0;
+    margin: 0.75rem 0.375rem;
     background-color: #ffffff;
     border: none;
+    vertical-align: top;
   }
   .card--desktop-small {
     width: 38%;
